# Knowledge-Management

./: .env.example  ADOC_Approach_WhitePaper.md  KEYCLOAK_SETUP_GUIDE.md  README.Docker.md  README.md  docker-compose.yml  keycloak.txt  slm.py  tak.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  TESTING_FUNCTIONGEMMA.md  check_documents.py  create_agent_sessions_indexes.py  create_tak_indexes.py  download_youtube.py  pyproject.toml  test1.py  test_pinecone_metadata.py  test_video_ingestion.py
backend/app/: __init__.py  middleware.py  server.py  settings.py  thread_pool.py  worker.py
backend/auth/: config.py  crud.py  database.py  dependencies.py  keycloak_auth.py  models.py  utils.py
backend/clients/: age_graph_client.py  chunker_client.py  cot_builder.py  entity_vector_cache.py  graphrag_client.py  groq_whisper_client.py  idrivee2_client.py  image_analysis_client.py  markitdown_client.py  mongodb_client.py  pdf_image_extractor.py  pgvector_client.py  pinecone_client.py  postgres_client.py  tak_client.py  ultimate_llm.py  unstructured_client.py  video_aligner.py  youtube_downloader.py  (+3 more)
deploy-railway/: Dockerfile  README.md
frontend/: .dockerignore  .env  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend-nextjs/: .dockerignore  .env.example  DOCKER.md  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test-presigned-url.js
voice-agent/: Dockerfile  agent.py  livekit.toml  prompts.py  pyproject.toml  retriever.py  settings.py  tools.py
(+147 files in other folders)
